2006-04-14  Adam Jackson  <ajax@freedesktop.org>

	* hw/dmx/input/dmxinputinit.c:
	Coverity #1007: Fix a silly null check.

2006-04-15  Luc Verhaegen  <libv@skynet.be>

	* hw/xfree86/utils/cvt/cvt.c: (PrintUsage):
	* hw/xfree86/utils/cvt/cvt.man.pre:
	CVT means Coordinated Video Timing instead of Common.

2006-04-14  Adam Jackson  <ajax@freedesktop.org>

	* hw/xfree86/os-support/Makefile.am:
	Bug #6580: Don't install xf86drm.h, that's libdrm's job.

2006-04-09  Daniel Stone  <daniel@freedesktop.org>

	* Xi/exevents.c:
	Coverity #323, #445, #446, #447: Fix potential NULL dereferences.

	* xkb/ddxList.c:
	Coverity #169: Fix potential fgets() into NULL (?!?).

	* xkb/XKBMAlloc.c:
	Coverity #324: Fix potential NULL dereference.  (Alan Coopersmith)

	* xkb/xkb.c:
	Coverity #340: Fix potential NULL dereference.
	Clean up proliferation of 'register int n' in loops of ProcXkbGetNames.

2006-04-07  Aaron Plattner  <aplattner@nvidia.com>

	* hw/xfree86/common/xf86Module.h:
	Bump the ABI versions.  Due to Glyph privates and the XV update below,
	the video driver ABI needs to be bumped to 1.0.  The rest of the ABI
	minor versions were bumped to include the LoaderGetABIVersion
	function.
	* hw/xfree86/common/xf86xv.c: (xf86XVRegetVideo),
	(xf86XVReputVideo), (xf86XVReputImage), (xf86XVPutStill),
	(xf86XVGetStill), (xf86XVPutImage):
	* hw/xfree86/common/xf86xv.h:
	Add a DrawblePtr argument to the XV hooks.  This allows drivers to
	determine that the target window is redirected and draw to the
	appropriate place.

Fri Apr  7 13:46:45 2006  Søren Sandmann  <sandmann@redhat.com>

	* composite/compext.c (ProcCompositeReleaseOverlayWindow): Use
	FreeResource instead of deleteCompOverlayClient()

2006-04-07  Adam Jackson  <ajax@freedesktop.org>

	* hw/xfree86/common/xisb.c:
	* hw/xfree86/common/xisb.h:
	Remove libc wrapper types from Xisb interfaces.

2006-04-07  Daniel Stone  <daniel@freedesktop.org>

	* hw/xfree86/utils/xorgcfg/keyboard-cfg.c: